--- a/.env.example
+++ b/.env.example
@@ -25,11 +25,11 @@ ELASTICSEARCH_URL=http://elasticsearch:9200
 MEMCACHED_HOSTS=memcached:11211
 REDIS_URL=redis://feedbin-redis:6379
 
-POSTGRES=postgres
+POSTGRES=feeedbin-postgres
 POSTGRES_USERNAME=feedbin
 POSTGRES_USER=feedbin
 POSTGRES_PASSWORD=
-DATABASE_URL=postgres://feedbin:feedbin@postgres/feedbin_production
+DATABASE_URL=postgres://feedbin:feedbin@pfeedbin-postgres/feedbin_production
 
 # S3
 AWS_ACCESS_KEY_ID=
