--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,8 @@ FEEDBIN_HOST=feedbin.domain.tld
 FORCE_SSL=
 
 # Databases
-ELASTICSEARCH_URL=http://elasticsearch:9200
-MEMCACHED_HOSTS=memcached:11211
+ELASTICSEARCH_URL=http://feedbin-elasticsearch:9200
+MEMCACHED_HOSTS=feedbin-memcached:11211
 REDIS_URL=redis://feedbin-redis:6379
 
 POSTGRES=feeedbin-postgres
