--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,7 @@ POSTGRES=feeedbin-postgres
 POSTGRES_USERNAME=feedbin
 POSTGRES_USER=feedbin
 POSTGRES_PASSWORD=
-DATABASE_URL=postgres://feedbin:feedbin@pfeedbin-postgres/feedbin_production
+DATABASE_URL=postgres://feedbin:[YOUR_POSTGRESS_PASSWORD_HERE]@pfeedbin-postgres/feedbin_production
 
 # S3
 AWS_ACCESS_KEY_ID=
